@@ -26,6 +26,7 @@
             border: 1px solid #cccccc;
             color: black;
         }
+
     </style>
 </head>
 
@@ -47,6 +48,12 @@
 </p>
 <ul>
     <li>[Bugfix] Default to WebDAV for http:// scheme in quick connect and CLI</li>
+    <li>[Bugfix] Selecting multiple files to copy URL will only copy first item in list (<a
+            href="https://trac.cyberduck.io/ticket/10024">#10024</a>)
+    </li>
+    <li>[Bugfix] Quick Look only works one time (<a
+            href="https://trac.cyberduck.io/ticket/9889">#9889</a>) (Mac)
+    </li>
 </ul>
 
 <p>
